# BirdCLEF_2025_2nd_place

./: .gitignore  .pre-commit-config.yaml  DATA.md  IDEAS.md  IDEAS_2024.md  README.md  RESULTS.yaml  RESULTS_2024.yaml  metrics.csv  model_train_queue.sh  pyproject.toml  rock_that_bird.sh  update_model_dataset.sh  update_model_dataset_folds.sh  update_repo.sh
all_configs/: eca_nfnet_l0_Exp_noamp_128bs_5sec_BasicAug_SqrtBalancing_Radamlr1e3_CosBatchLR1e6_Epoch83_FocalBCELoss_LSF1005_FromXCV2Best_PseudoF2PT05MT01P04I3_MinorOverSampleV1.py  eca_nfnet_l0_Exp_noamp_64bs_5sec_BasicAug_EqualBalancing_Radamlr1e3_CosBatchLR1e6_Epoch50_FocalBCELoss_LSF1005_FromPreca4_PseudoF2PT05MT01P04I2.py  eca_nfnet_l0_Exp_noamp_64bs_5sec_BasicAug_EqualBalancing_Radamlr1e3_CosBatchLR1e6_Epoch50_FocalBCELoss_LSF1005_FromPreca4_PseudoF2PT05MT01P04I2_AddCSA.py  eca_nfnet_l0_Exp_noamp_64bs_5sec_BasicAug_EqualBalancing_Radamlr1e3_CosBatchLR1e6_Epoch50_FocalBCELoss_LSF1005_FromPreca4_PseudoF2PT05MT01P04I2_AddCSA_AddRareBirdsNoLeak.py  eca_nfnet_l0_Exp_noamp_64bs_5sec_BasicAug_EqualBalancing_Radamlr1e3_CosBatchLR1e6_Epoch50_FocalBCELoss_LSF1005_FromPreca4_PseudoF2PT05MT01P04I2_AddCSA_AddRareBirdsNoLeak_CurV3.py  eca_nfnet_l0_Exp_noamp_64bs_5sec_BasicAug_EqualBalancing_Radamlr1e3_CosBatchLR1e6_Epoch50_FocalBCELoss_LSF1005_FromPreca4_PseudoF2PT05MT01P04I2_AddRareBirdsNoLeak.py  eca_nfnet_l0_Exp_noamp_64bs_5sec_BasicAug_EqualBalancing_Radamlr1e3_CosBatchLR1e6_Epoch50_FocalBCELoss_LSF1005_FromXCV2Best_PseudoF2PT05MT01P04I3_AddRareBirdsNoLeak.py  (+61 more)
data/: bird2int_2025.json  sb_2025.json  (+5 more)
(+127 files in other folders)
